--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -21,8 +21,14 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
+        architecture: x64
+    - run: pip install nox==2022.11.21
+    - run: pip install poetry==1.3.2
     - name: Install Dependencies
-      run: |
+    - run: |
+        export SECRET_KEY=${{secrets.SECRET_KEY}}
+        export EMAIL_HOST_PASSWORD=${{secrets.EMAIL_HOST_PASSWORD}}
+        export DATABASE_URL=${{secrets.DATABASE_URL}}
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run Tests
