--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -16,22 +16,22 @@ jobs:
         python-version: ['3.9', '3.10', '3.11']
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-        architecture: x64
-    - name: Setup environment
-    - run: pip install nox==2022.11.21
-    - run: pip install poetry==1.3.2
-    - name: Install Dependencies
-    - run: |
-        export SECRET_KEY=${{secrets.SECRET_KEY}}
-        export EMAIL_HOST_PASSWORD=${{secrets.EMAIL_HOST_PASSWORD}}
-        export DATABASE_URL=${{secrets.DATABASE_URL}}
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Run Tests
-      run: |
-        python manage.py test
+      - uses: actions/checkout@v3
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+          architecture: x64
+      - name: Setup environment
+        run: pip install nox==2022.11.21
+        run: pip install poetry==1.3.2
+      - name: Install Dependencies
+      - run: |
+          export SECRET_KEY=${{secrets.SECRET_KEY}}
+          export EMAIL_HOST_PASSWORD=${{secrets.EMAIL_HOST_PASSWORD}}
+          export DATABASE_URL=${{secrets.DATABASE_URL}}
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Run Tests
+        run: |
+          python manage.py test
