--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -22,11 +22,10 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
-      - name: Setup environment
         run: pip install nox==2022.11.21
         run: pip install poetry==1.3.2
       - name: Install Dependencies
-      - run: |
+        run: |
           export SECRET_KEY=${{secrets.SECRET_KEY}}
           export EMAIL_HOST_PASSWORD=${{secrets.EMAIL_HOST_PASSWORD}}
           export DATABASE_URL=${{secrets.DATABASE_URL}}
