--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -22,8 +22,8 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
-        run: pip install nox==2022.11.21
-        run: pip install poetry==1.3.2
+      - run: pip install nox==2022.11.21
+      - run: pip install poetry==1.3.2
       - name: Install Dependencies
         run: |
           export SECRET_KEY=${{secrets.SECRET_KEY}}
