--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -24,8 +24,7 @@ jobs:
           architecture: x64
       - run: pip install nox==2022.11.21
       - run: pip install poetry==1.3.2
-      - name: Install Dependencies
-        run: |
+      - run: |
           export SECRET_KEY=${{secrets.SECRET_KEY}}
           export EMAIL_HOST_PASSWORD=${{secrets.EMAIL_HOST_PASSWORD}}
           export DATABASE_URL=${{secrets.DATABASE_URL}}
