--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,7 +67,7 @@ gunicorn = "~=20.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.0.0"
-black = "^22.3.0"
+black = "^23.0.0"
 flake8 = "^6.0.0"
 django-debug-toolbar = "^3.4.0"
 pytest = "^7.1.2"
@@ -87,7 +87,7 @@ flake8-bandit = "^4.0.0"
 flake8-black = "^0.3.3"
 flake8-bugbear = "^23.0.0"
 flake8-import-order = "^0.18.1"
-safety = "^2.3.5"
+safety = "2.3.4"
 pip-check = "^2.7"
 Sphinx = "^6.1.0"
 pip-audit = "^2.4.0"
