--- a/pyproject.toml
+++ b/pyproject.toml
@@ -83,7 +83,7 @@ colorama = "^0.4.4"
 django-coverage-plugin = "^3.0.0"
 django-pytest = "^0.2.0"
 factory-boy = "^3.2.0"
-nox = "^2022.1.7"
+nox = "2023.4.22"
 flake8-bandit = "^4.0.0"
 flake8-black = "^0.3.3"
 flake8-bugbear = "^23.0.0"
