--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,7 +27,7 @@ repos:
         files: (^|/)a/.+\.(py|html|sh|css|js)$
 
   - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: 'v0.0.267'
+    rev: v0.0.267
     hooks:
     - id: ruff
       args: [ --fix, --exit-non-zero-on-fix ]
@@ -40,7 +40,7 @@ repos:
       exclude: ^.*\b(migrations)\b.*$
 
   - repo: https://github.com/python-poetry/poetry
-    rev: '1.4.0'
+    rev: 1.4.0
     hooks:
       - id: poetry-check
       - id: poetry-lock
