--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,7 +94,7 @@ environs = { version = "^9.5.0", extras = ["django"] }
 django-extensions = "^3.2"
 whitenoise = "^6.1.0"
 psycopg2-binary = "^2.9.5"
-Pillow = "^9.3.0"
+Pillow = "^10.0"
 django-countries = "^7.3.2"
 gunicorn = "~=20.1.0"
 crispy-bootstrap4 = "^2022.1"
@@ -118,7 +118,7 @@ coverage = { version = "^7.0.0", extras = ["toml"] }
 pytest-cov = "^4.0.0"
 pytest-django = "^4.5.2"
 django-pytest = "^0.2.0"
-ruff = "^0.0.275"
+ruff = ">= 0.0.275, < 0.0.299"
 sphinx-rtd-theme = "^1.2.0"
 djlint = "^1.31.0"
 werkzeug = "^2.3.6"
