--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -19,6 +19,9 @@ babel==2.12.1 ; python_version >= "3.10" and python_version < "4.0" \
 backcall==0.2.0 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:5cbdbf27be5e7cfadb448baf0aa95508f91f2bbc6c6437cd9cd06e2a4c215e1e \
     --hash=sha256:fbbce6a29f263178a1f7915c1940bde0ec2b2a967566fe1c65c1dfb7422bd255
+beautifulsoup4==4.12.2 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:492bbc69dca35d12daac71c4db1bfff0c876c00ef4a2ffacce226d4638eb72da \
+    --hash=sha256:bd2520ca0d9d7d12694a53d44ac482d181b4ec1888909b035a3dbf40d0f57d4a
 black==23.7.0 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:022a582720b0d9480ed82576c920a8c1dde97cc38ff11d8d8859b3bd6ca9eedb \
     --hash=sha256:501387a9edcb75d7ae8a4412bb8749900386eaef258f1aefab18adddea1936bc \
@@ -418,6 +421,9 @@ friendly-styles==0.2 ; python_version >= "3.10" and python_version < "4.0" \
 friendly-traceback==0.7.61 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:6945346e49a4ef72c855723f09a6d9b1b4fbf43759d4529f779f29259efab9f7 \
     --hash=sha256:8ca149ea4effa114a9d4354078d0252dbc53e291cdcc63f23e34b8fb65ba15f3
+furo==2023.7.26 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:1c7936929ec57c5ddecc7c85f07fa8b2ce536b5c89137764cca508be90e11efd \
+    --hash=sha256:257f63bab97aa85213a1fa24303837a3c3f30be92901ec732fea74290800f59e
 gunicorn==21.2.0 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:3213aa5e8c24949e792bcacfc176fef362e7aac80b76c56f6b5122bf350722f0 \
     --hash=sha256:88ec8bff1d634f98e61b9f65bc4bf3cd918a90806c6f5c48bc5603849ec81033
@@ -706,9 +712,6 @@ pytest-sugar==0.9.7 ; python_version >= "3.10" and python_version < "4.0" \
 python-dateutil==2.8.2 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:0123cacc1627ae19ddf3c27a5de5bd67ee4586fbdd6440d9748f8abb483d3e86 \
     --hash=sha256:961d03dc3453ebbc59dbdea9e4e11c5651520a876d0f4db161e8674aae935da9
-python-docs-theme==2023.5 ; python_version >= "3.10" and python_version < "4.0" \
-    --hash=sha256:54fc9865ac80c0d6606d00eb60d1f9fc6dcd4fe152a4a43e40394bc65b7ffc33 \
-    --hash=sha256:9a7d22f609c85d392039b1d12320fbeaee66bdf5e838f5bcc1100e59d73be86d
 python-dotenv==1.0.0 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:a8df96034aae6d2d50a4ebe8216326c61c3eb64836776504fcca410e5937a3ba \
     --hash=sha256:f5971a9226b701070a4bf2c38c89e5a3f0d64de8debda981d1db98583009122a
@@ -924,9 +927,15 @@ six==1.16.0 ; python_version >= "3.10" and python_version < "4.0" \
 snowballstemmer==2.2.0 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:09b16deb8547d3412ad7b590689584cd0fe25ec8db3be37788be3810cbf19cb1 \
     --hash=sha256:c8e1716e83cc398ae16824e5572ae04e0d9fc2c6b985fb0f900f5f0c96ecba1a
-sphinx==7.0.1 ; python_version >= "3.10" and python_version < "4.0" \
-    --hash=sha256:60c5e04756c1709a98845ed27a2eed7a556af3993afb66e77fec48189f742616 \
-    --hash=sha256:61e025f788c5977d9412587e733733a289e2b9fdc2fef8868ddfbfc4ccfe881d
+soupsieve==2.4.1 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:1c1bfee6819544a3447586c889157365a27e10d88cde3ad3da0cf0ddf646feb8 \
+    --hash=sha256:89d12b2d5dfcd2c9e8c22326da9d9aa9cb3dfab0a83a024f05704076ee8d35ea
+sphinx==7.1.0 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:8f336d0221c3beb23006b3164ed1d46db9cebcce9cb41cdb9c5ecd4bcc509be0 \
+    --hash=sha256:9bdfb5a2b28351d4fdf40a63cd006dbad727f793b243e669fc950d7116c634af
+sphinx-basic-ng==1.0.0b2 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:9ec55a47c90c8c002b5960c57492ec3021f5193cb26cebc2dc4ea226848651c9 \
+    --hash=sha256:eb09aedbabfb650607e9b4b68c9d240b90b1e1be221d6ad71d61c52e29f7932b
 sphinxcontrib-applehelp==1.0.4 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:29d341f67fb0f6f586b23ad80e072c8e6ad0b48417db2bde114a4c9746feb228 \
     --hash=sha256:828f867945bbe39817c210a1abfd1bc4895c8b73fcaade56d45357a348a07d7e
