--- a/pyproject.toml
+++ b/pyproject.toml
@@ -132,6 +132,7 @@ indent=2
 preserve_blank_lines=true
 
 [tool.pyright]
+# See: https://github.com/microsoft/pyright/blob/main/docs/configuration.md
 include = ["config", "accounts", "pages",]
 exclude = ["**/tests",
     "**/__pycache__",
@@ -140,8 +141,12 @@ exclude = ["**/tests",
 ignore = ["docs/_build"]
 defineConstant = { DEBUG = true }
 stubPath = ""
+# The following may need to be modified when collaborating with others
 venv = "django-start-l9hOYV8r-py3.11"
 venvPath = "../../../venvs"
+# More portable venv config
+# venvPath = "."
+# venv = ".venv"
 
 typeCheckingMode = "basic"
 useLibraryCodeForTypes = true
