--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,7 +72,7 @@ werkzeug = "^3.0"
 pyopenssl = "^23.2.0"
 sphinx = ">= 7.2.5, < 7.3.0"
 furo = "^2023.5.20"
-ruff = ">= 0.0.275, < 0.0.299"
+ruff = "^0.1.0"
 
 [tool.black]
 line-length = 88
