--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -373,9 +373,9 @@ django-debug-toolbar==4.2.0 ; python_version >= "3.10" and python_version < "4.0
 django-extensions==3.2.3 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:44d27919d04e23b3f40231c4ab7af4e61ce832ef46d610cc650d53e68328410a \
     --hash=sha256:9600b7562f79a92cbf1fde6403c04fee314608fefbb595502e34383ae8203401
-django-types==0.18.0 ; python_version >= "3.10" and python_version < "4.0" \
-    --hash=sha256:7c28fefecfddec1fae7a3b7fec74a12862cf45b76fc891b220fbd42ccbc44808 \
-    --hash=sha256:b8e2334c810864d7abf11cd3cdb1da3b2015b67e7f1270007e33777ff1bd8654
+django-types==0.19.1 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:5ae7988612cf6fbc357b018bbc3b3a878b65e04275cc46e0d35d66a708daff12 \
+    --hash=sha256:b3f529de17f6374d41ca67232aa01330c531bbbaa3ac4097896f31ac33c96c30
 djlint==1.34.0 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:60b4f4ca99fd83106603bdd466f35314fda33776f3a6e70ea9d674da9d0ad053 \
     --hash=sha256:bdc26cc607dee8b46e262654eb0fbac7862c34d68172c8adc25a0b56fc7d8173
@@ -400,9 +400,9 @@ executing==2.0.0 ; python_version >= "3.10" and python_version < "4.0" \
 factory-boy==3.3.0 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:a2cdbdb63228177aa4f1c52f4b6d83fab2b8623bf602c7dedd7eb83c0f69c04c \
     --hash=sha256:bc76d97d1a65bbd9842a6d722882098eb549ec8ee1081f9fb2e8ff29f0c300f1
-faker==19.10.0 ; python_version >= "3.10" and python_version < "4.0" \
-    --hash=sha256:63da90512d0cb3acdb71bd833bb3071cb8a196020d08b8567a01d232954f1820 \
-    --hash=sha256:f321e657ed61616fbfe14dbb9ccc6b2e8282652bbcfcb503c1bd0231ff834df6
+faker==19.11.0 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:a62a3fd3bfa3122d4f57dfa26a1cc37d76751a76c8ddd63cf9d24078c57913a4 \
+    --hash=sha256:e28090068293c5a83e7f4d636417d45fae1031ca8a8136cc2415549ebc2111e2
 filelock==3.12.4 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:08c21d87ded6e2b9da6728c3dff51baf1dcecf973b768ef35bcbc3447edb9ad4 \
     --hash=sha256:2e6f249f1f3654291606e046b09f1fd5eac39b360664c27f5aad072012f8bcbd
@@ -987,6 +987,9 @@ tqdm==4.66.1 ; python_version >= "3.10" and python_version < "4.0" \
 traitlets==5.11.2 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:7564b5bf8d38c40fa45498072bf4dc5e8346eb087bbf1e2ae2d8774f6a0f078e \
     --hash=sha256:98277f247f18b2c5cabaf4af369187754f4fb0e85911d473f72329db8a7f4fae
+types-psycopg2==2.9.21.14 ; python_version >= "3.10" and python_version < "4.0" \
+    --hash=sha256:bf73a0ac4da4e278c89bf1b01fc596d5a5ac7a356cfe6ac0249f47b9e259f868 \
+    --hash=sha256:cd9c5350631f3bc6184ec8d48f2ed31d4ea660f89d0fffe78239450782f383c5
 typing-extensions==4.8.0 ; python_version >= "3.10" and python_version < "4.0" \
     --hash=sha256:8f92fc8806f9a6b641eaa5318da32b44d401efaac0f6678c9bc448ba3605faa0 \
     --hash=sha256:df8e4339e9cb77357558cbdbceca33c303714cf861d1eef15e1070055ae8b7ef
