--- a/.github/workflows/nox-tests_multi-arch.yml
+++ b/.github/workflows/nox-tests_multi-arch.yml
@@ -1,4 +1,4 @@
-name: nox-lint_multi-arch
+name: nox-safety_multi-arch
 on: push
 jobs:
   tests:
@@ -21,4 +21,4 @@ jobs:
           export SECRET_KEY=${{ secrets.SECRET_KEY }}
           export EMAIL_HOST_PASSWORD=${{ secrets.EMAIL_HOST_PASSWORD }}
           export DATABASE_URL=${{ secrets.DATABASE_URL }}
-          nox -s lint-${{ matrix.python-version }}
+          nox -s tests-${{ matrix.python-version }}
