--- a/.github/workflows/nox-lint_multi-arch.yml
+++ b/.github/workflows/nox-lint_multi-arch.yml
@@ -21,4 +21,6 @@ jobs:
           export SECRET_KEY=${{ secrets.SECRET_KEY }}
           export EMAIL_HOST_PASSWORD=${{ secrets.EMAIL_HOST_PASSWORD }}
           export DATABASE_URL=${{ secrets.DATABASE_URL }}
+          export SOCIALACCOUNT_APP_CLIENT_ID=${{ secrets.SOCIALACCOUNT_APP_CLIENT_ID }}
+          export SOCIALACCOUNT_APP_SECRET=${{ secrets.SOCIALACCOUNT_APP_SECRET }}
           nox -s lint-${{ matrix.python-version }}
