--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,7 +34,7 @@ repos:
       args: [ --fix, --exit-non-zero-on-fix ]
 
   - repo: https://github.com/psf/black
-    rev: 23.12.0
+    rev: 23.12.1
     hooks:
     - id: black
       name: black
@@ -47,6 +47,11 @@ repos:
       exclude: "htmlcov"
     - id: djlint-django
       exclude: "htmlcov"
+
+  - repo: https://github.com/sphinx-contrib/sphinx-lint
+    rev: v0.9.1
+    hooks:
+    - id: sphinx-lint
 
   - repo: https://github.com/python-poetry/poetry
     rev: 1.7.0
