--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,7 @@ pyopenssl = "^23.2.0"
 sphinx = ">= 7.2.5, < 7.3.0"
 furo = "^2023.5.20"
 ruff = "^0.1.0"
+sphinx-lint = "^0.9.1"
 
 [tool.black]
 line-length = 88
