--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ classifiers = [
     "Operating System :: OS Independent",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3 :: Only",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
@@ -39,8 +40,8 @@ python = "^3.10"
 Django = "5.0.1"
 
 django-crispy-forms = "^2.0"
-django-allauth = ">=0.54.0, < 0.60.0"
-environs = { version = "^10.0", extras = ["django"] }
+django-allauth = ">=0.60, < 0.61"
+environs = { version = "^10", extras = ["django"] }
 django-extensions = "^3.2"
 whitenoise = "^6.1.0"
 psycopg2-binary = "^2.9.5"
@@ -61,7 +62,7 @@ friendly = "^0.7.0"
 colorama = "^0.4.4"
 django-coverage-plugin = "^3.0.0"
 nox = "2023.4.22"
-safety = "2.4.0b2"
+safety = "3.0.0"
 factory-boy = "^3.2.0"
 coverage = { version = "^7.0.0", extras = ["toml"] }
 pytest-cov = "^4.0.0"
