--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,10 +37,10 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.10"
-Django = "5.0.1"
+Django = "5.0.2"
 
 django-crispy-forms = "^2.0"
-django-allauth = ">=0.60, < 0.61"
+django-allauth = ">=0.60, <= 0.69"
 environs = { version = "^10", extras = ["django"] }
 django-extensions = "^3.2"
 whitenoise = "^6.1.0"
